add object translation component

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a-assets>
 
             <a-box id="blue-cube" position="-3 0.5 -11" rotation="0 45 0" color="blue" opacity="0.3"></a-box>
-            <a-sphere id="red-sphere" position="0 0.5 -11" radius="0.5" color="red" opacity="0.3"></a-sphere>
+            <a-sphere id="red-sphere" click-to-reposition position="0 0.5 -11" radius="0.5" color="red" opacity="0.3"></a-sphere>
             <a-cylinder id='green-cyl' position="3 0.75 -11" radius="0.5" height="1.5" color="green" opacity="0.3"></a-cylinder>
 
             <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
