add movable box to oculus quest staging area

--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -42,6 +42,10 @@
 
     <a-cylinder id='green-cyl' class="clickable" position="6.5 .75 -8" radius="0.5" color="green" opacity="0.3"></a-cylinder>
 
+    <a-box class="clickable" click-to-reposition position="0 1 -4" color="red" opacity="0.2">
+      <a-text value="movable" align="center" side="double"></a-text>
+    </a-box>
+
 
     <a-text position="8 4 -8" value="Click on these link to go to other sites. 'Stuff' is a room with a few things to click on (move controls pending). 'A-Painter' is a drawing appp by Mozilla. 'Baltri' is a weird art thing I'm doing with some friends from DR (click+move controls pending)."></a-text>
 
