--- a/art/mangogeddon.html
+++ b/art/mangogeddon.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <title>Shaggy Rogers</title>
+        <title>Mangogeddon</title>
         <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     </head>
     <body style="font-family:courier; color:white; background-color: black">
@@ -96,14 +96,14 @@
         return rgb;
       }
       let mango_rgb_hex_generator = () => {
-        let r = Math.floor(Math.random()*(256/2) + 256/2).toString(16);
-        let g = Math.floor(Math.random()*(256/4) + 256/4).toString(16);
-        let b = Math.floor(Math.random()*(256/16)+ 256/8).toString(16);
+        let r = Math.floor(Math.random()*(256*1/16) + 256*15/16).toString(16);
+        let g = Math.floor(Math.random()*(256*4/16) + 256*8/16).toString(16);
+        let b = Math.floor(Math.random()*(256/16)+ 256/16).toString(16);
         let rgb = [r, g, b].map(i => i.length === 1 ? '0'.concat(i) : i).join("");
         return rgb;
       }
       let cloud_rgb_hex_generator = () => {
-        let r = Math.floor(Math.random()*(256/8) + 256*5/8).toString(16);
+        let r = Math.floor(Math.random()*(256*2/8) + 256*5/8).toString(16);
         // let g = Math.floor(Math.random()*(256/8) + 256*6/8).toString(16);
         let g = r;
         let b = Math.floor(Math.random()*(256/8) + 256*7/8).toString(16);
