--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -34,6 +34,7 @@
       </a-entity>
 
       <a-entity pos-trail-line laser-controls="hand: right" grip-to-move="targetID: camera-wrapper" raycaster="objects:.clickable; far:4">
+        <a-sphere line-drawer particle-applicator radius="0.0005" position="-0.05 -0.05 -0.05"></a-sphere>
         <a-box  height="0.1" width="0.1" depth="0.1" opacity="0.2"></a-box>
       </a-entity>
 
