add link to mangogeddon

--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -47,13 +47,13 @@
       <a-text value="movable" align="center" side="double"></a-text>
     </a-box>
 
+    <a-text position="8 4 -8" value="MANGOGEDDON (warning: doesn't have a link back to here)"></a-text>
+    <!-- <a-text position="8 4 -8" value="Click on these link to go to other sites. 'Stuff' is a room with a few things to click on (move controls pending). 'A-Painter' is a drawing appp by Mozilla. 'Baltri' is a weird art thing I'm doing with some friends from DR (click+move controls pending)."></a-text> -->
 
-    <a-text position="8 4 -8" value="Click on these link to go to other sites. 'Stuff' is a room with a few things to click on (move controls pending). 'A-Painter' is a drawing appp by Mozilla. 'Baltri' is a weird art thing I'm doing with some friends from DR (click+move controls pending)."></a-text>
-
-    <a-link class="clickable" position="5 1 -8" href="#" title="refresh" image="#lamb"></a-link>
-    <a-link class="clickable" position="8 1 -8" href="../../" title="Stuff" image="#lamb"></a-link>
-    <a-link class="clickable" position="11 1 -8" href="https://aframe.io/a-painter/" title="A Painter\n" image="#lamb"></a-link>
-    <a-link link-controls id="baltri" title-color="red" class="clickable" position="14 1 -8" href="http://baltri.com" title="Baltri" image="#lamb"></a-link>
+    <a-link class="clickable" position="5 1 -8" href="../../art/mangogeddon.html" title="MANGOGEDDON" image="#lamb"></a-link>
+    <!-- <a-link class="clickable" position="8 1 -8" href="../../" title="Stuff" image="#lamb"></a-link> -->
+    <!-- <a-link class="clickable" position="11 1 -8" href="https://aframe.io/a-painter/" title="A Painter\n" image="#lamb"></a-link> -->
+    <!-- <a-link link-controls id="baltri" title-color="red" class="clickable" position="14 1 -8" href="http://baltri.com" title="Baltri" image="#lamb"></a-link> -->
     <a-text position="-10 4 -6" value="Placed like this, you can literally walk into a 360 image. (note to self: find a 360 image worth showing off)"></a-text>
     <a-sky src="#lamb" radius="2" position="-7.5 1 -6"></a-sky>
 
