Facebook deprecated 3D posts D:

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Jose's Stuff</title>
         <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+        <script src="../../lib/GLTFExporter.js"></script>
         <script src="lib/jose-components.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <meta charset="UTF-8">
