--- a/index.html
+++ b/index.html
@@ -123,18 +123,33 @@
 
         </a-scene>
         <div id="0Panel">
+            <style type="text/css">
+                h1{
+                    font-size: 3em;
+                }
+            </style>
+
             <h1>A place for stuff</h1>
             <br>
-            <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
+            <p>The Basics:</p>
+            <br>
+            <p>This is a personal sandbox site for testing WebVR/Aframe components. My focus so far has been more on creating re-usable reference code than making a consumer-ish website.</p>
+            <br>
+            <p>Most of my demos are targetted for Mouse+Keyboard, if you are on a VR-Headset please try out my <a href="demo/oculus-quest/index.html">Oculus Quest Demo</a>. If you are on a cell phone, you can at least move around inside my <a href="demo/touch-controls.html">Touchscreen Joystick Test<a>.</p>
+            <br>
+            <p>"Stuff" main page (you are here): click blue cube to play video, red sphere to move it around, green cylinder to play an audio file. Yellow box has a click counter. The paper cup image is just something I drew on (blue marker, black pen, pink powerade and coffee for the sand), the glithy image it sometimes shows is an example of <a href="https://en.wikipedia.org/wiki/Z-fighting">z-fighting<a>. The lamb is a PNG cutout. The handwriting is my actual handwriting, blown-up.</p>
+            <br>
+            <p>I apologize by how spartan this mess might look. My R&D focus has been mostly on interactivity and getting the basics down. It took me long enough to get where I am, and my ThreeJS skills are enough to control a <a href="https://youtu.be/glcCmk9Whik">robotic arm<a> in real-time (from the frontend, via WebSockets). As a consolation prize, please have this <a href="demo/bench.html">pointy ball thing</a> as proof that I can programmatically place lines and spheres in space and/or create somewhat aesthetically pleasing compositions.</p>
+
             <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
             <br>
-            <p>The laser stick that's attached to you is a clicking device. Initially meant as a head-mounted pointing apparatus for cardboard-type devices, as an improvement to "hover to click" reticules.</p>
+            <p>The laser stick that's attached to you is a clicking device. Initially meant as a head-mounted pointing apparatus for cardboard-type devices, it's an improvement to "hover to click" reticules that plays well with mouse+keyboard interfaces.</p>
             <br>
             <p>TODAY'S MENU</p>
             <br>
             <ul>
                 <li>
-                    <span class="red">►</span> Oculust Quest test <a href="demo/oculus-quest/index.html">[open]</a>
+                    <span class="red">►</span> Oculust Quest test <a href="demo/oculus-quest/index.html">[open]</a>. Hold down grip button to start moving, use A/B buttons to draw in air.
                 </li>
                 <li>
                     <span class="red">►</span> WebVR Micro-Demos <a href="demo/index.html">[open]</a>
@@ -148,33 +163,9 @@
             <p>=====</p>
             <p>Oh, hi there! For now please enjoy this simple scene.</p>
             <p>=====</p>
-
             <br>
-            <br>
-            <p>20181228</p>
-            <p>I will comment on the creation of this project, and also random subjects.</p>
-            <br>
-            <p>20190105</p>
-            <p>Making a Clicker game. For now it's a button that increases your score. (bug: randomly doesn't work, probably a raycaster issue)</p>
-            <br>
-            <p>20190107</p>
             <p>And to our side we have a scene powered by the A-Frame WebVR framework, written in HTML and JavaScript.</p>
             <br>
-            <p>20190110</p>
-            <p>Added laser pointer to stick. Should be possible to add cardboard controls.</p>
-            <br>
-            <p>20190201</p>
-            <p>Imagine a table where everyone in the would could sit at, at the same time.</p>
-            <br>
-            <p>20190525</p>
-            <p>Bought an Oculus Quest, testing this stuff should be much easier ging forward, I can definitely see it being my main WebVR device.</p>
-            <!-- <p>20190116</p> -->
-            <!-- <p>Cardboard controls live!</p> -->
-            <!--123456789 123456789 1234567894444444444 123456789 123456789 1234567898888888888 123456789 123456789 123456789 123456789 123456789 123456789 -->
-            <br>
-            <p>For now, this app is meant to be opened using a WASD+mouse configuration.</p>
-            <p>This is mostly a test, but functionalities should greatly increase once when I eventually get to hooking this up to a database.</p>
-            <p>For now, I'm also working on a robot that I want to control via this interface, in VR, so it feels like I'm piloting a Mech.</p>
             <p>=====</p>
             <p>You start out in a <span class="red">MYSTERIOUS VOID</span>.</p>
             <p>Your eyes grate on the GREAT WALL OF TEXT.</p>
@@ -183,17 +174,13 @@
             <p>Use your W/A/S/D keys to move around</p>
             <p>Click the green cylinder to play audio</p>
             <p>Click the blue cube to play video</p>
-            <p>Click the red sphere to generate a tone</p>
+            <p>Click the red sphere to start moving it around</p>
             <p>Click/Touch-drag screen to rotate view</p>
             <br>
-            <p>Josh the Goat: "All the cool kids brush their teeth, stop being a loser!"</p>
+            <p>Josh the Goat says: "All the cool kids brush their teeth, don't be a loser!"</p>
             <br>
             <p>Videogame: "Don't hit Josh"</p>
             <p>Rules:<br>You loose one point each time you hit Josh with the stick<br>Keep track of the score yourself for now<br>I just got a score of -12, try beating it!</p>
-            <br>
-            <p>Homework, make one of these:</p>
-            <p>- An AI than can play Don't hit Josh</p>
-            <p>- An AI that can recognize numbers</p>
             <br>
             <p>Press "F", or the "Goggles" icon to go to full-screen mode.</p>
             <p>For now, mouse and keyboard constrols only. <span class="gre">#SorryNotSorry</span></p>
