style quote in landing page

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
                 h1{
                     font-size: 3em;
                 }
+                .quote {
+                    color: gray;
+                }
             </style>
 
             <h1>A place for stuff</h1>
@@ -140,8 +143,8 @@
             <p>"Stuff" main page (you are here): click blue cube to play video, red sphere to move it around, green cylinder to play an audio file. Yellow box has a click counter. The paper cup image is just something I drew on (blue marker, black pen, pink powerade and coffee for the sand), the glithy image it sometimes shows is an example of <a href="https://en.wikipedia.org/wiki/Z-fighting">z-fighting<a>. The lamb is a PNG cutout. The handwriting is my actual handwriting, blown-up.</p>
             <br>
             <p>I apologize by how spartan this mess might look. My R&D focus has been mostly on interactivity and getting the basics down. It took me long enough to get where I am, and my ThreeJS skills are enough to control a <a href="https://youtu.be/glcCmk9Whik">robotic arm<a> in real-time (from the frontend, via WebSockets). As a consolation prize, please have this <a href="demo/bench.html">pointy ball thing</a> as proof that I can programmatically place lines and spheres in space and/or create somewhat aesthetically pleasing compositions.</p>
-
-            <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
+            <br>
+            <p class="quote">"Remember kids, the only difference between screwing around and science is writing it down"<br>&nbsp;&nbsp;&nbsp;&nbsp; - Alex Jason (balistics expert)</p>
             <br>
             <p>The laser stick that's attached to you is a clicking device. Initially meant as a head-mounted pointing apparatus for cardboard-type devices, it's an improvement to "hover to click" reticules that plays well with mouse+keyboard interfaces.</p>
             <br>
