verbage stuff and restrict file uploads to images

--- a/demo/shaggy-rogers/index.html
+++ b/demo/shaggy-rogers/index.html
@@ -3,14 +3,14 @@
 <html>
     <head>
         <title>Shaggy Rogers</title>
-        <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+        <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     </head>
     <body style="font-family:courier; color:white; background-color: black">
         <section id="main"></section>
         <a-scene ar id="scene">
 
             <a-entity position="0 0 0">
-                <a-camera look-controls="pointerLockEnabled: true" wasd-controls></a-camera>
+                <!-- <a-camera look-controls="pointerLockEnabled: true" wasd-controls></a-camera> -->
             </a-entity>
 
             <a-image src='shaggy.png' height='10' width='5' position='0 5 -10'></a-image>
