in middle of implimenting shared control scheme

--- a/art/mangogeddon.html
+++ b/art/mangogeddon.html
@@ -13,7 +13,7 @@
         </audio>
 
         <section id="main"></section>
-        <a-scene ar id="scene">
+        <a-scene id="scene">
 
             <a-entity position="8.2 0 4.9" rotation="0 48 0">
                 <a-camera look-controls="pointerLockEnabled: false" wasd-controls></a-camera>
