--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <title>Jose Quest</title>
-  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <!-- in-vr links break upgrading 8.2 to 9.2 -->
+  <!-- <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script> -->
+  <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+
   <script src="../../lib/jose-components.js"></script>
   <meta charset="utf-8">
 </head>
@@ -20,6 +23,8 @@
       <img id="lamb" src="../../lamb.png">
     </a-assets>
 
+    <!-- REPLACE WITH VOODOO -->
+    <!-- 
     <a-entity id="camera-wrapper">
       <a-camera look-controls="pointerLockEnabled: true" near="0.001">
 
@@ -39,7 +44,9 @@
       </a-entity>
 
     </a-entity>
-
+    -->
+    <!-- REPLACE WITH VOODOO: contains a camera rig and Laser Controls targetting Oculus Quest -->
+    <a-entity joses-default-interface></a-entity>
 
     <a-cylinder id='green-cyl' class="clickable" position="6.5 .75 -8" radius="0.5" color="green" opacity="0.3"></a-cylinder>
 
@@ -51,9 +58,9 @@
     <!-- <a-text position="8 4 -8" value="Click on these link to go to other sites. 'Stuff' is a room with a few things to click on (move controls pending). 'A-Painter' is a drawing appp by Mozilla. 'Baltri' is a weird art thing I'm doing with some friends from DR (click+move controls pending)."></a-text> -->
 
     <a-link class="clickable" position="5 1 -8" href="../../art/mangogeddon.html" title="MANGOGEDDON" image="#lamb"></a-link>
-    <!-- <a-link class="clickable" position="8 1 -8" href="../../" title="Stuff" image="#lamb"></a-link> -->
-    <!-- <a-link class="clickable" position="11 1 -8" href="https://aframe.io/a-painter/" title="A Painter\n" image="#lamb"></a-link> -->
-    <!-- <a-link link-controls id="baltri" title-color="red" class="clickable" position="14 1 -8" href="http://baltri.com" title="Baltri" image="#lamb"></a-link> -->
+    <a-link class="clickable" position="8 1 -8" href="../../" title="Stuff" image="#lamb"></a-link>
+    <a-link class="clickable" position="11 1 -8" href="https://aframe.io/a-painter/" title="A Painter\n" image="#lamb"></a-link>
+    <a-link link-controls id="baltri" title-color="red" class="clickable" position="14 1 -8" href="http://baltri.com" title="Baltri" image="#lamb"></a-link>
     <a-text position="-10 4 -6" value="Placed like this, you can literally walk into a 360 image. (note to self: find a 360 image worth showing off)"></a-text>
     <a-sky src="#lamb" radius="2" position="-7.5 1 -6"></a-sky>
 
