--- a/demo/touch-controls.html
+++ b/demo/touch-controls.html
@@ -5,8 +5,12 @@
 <html>
     <head>
         <title>Player</title>
-        <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+        <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
         <script src="https://yoannmoinet.github.io/nipplejs/javascripts/nipplejs.js"></script>
+
+        <!-- delet dis? -->
+        <script src="../lib/jose-components.js"></script>
+
         <meta charset="UTF-8">
     </head>
 
