--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -59,8 +59,8 @@
 
     <a-link class="clickable" position="5 1 -8" href="../../art/mangogeddon.html" title="MANGOGEDDON" image="#lamb"></a-link>
     <a-link class="clickable" position="8 1 -8" href="../../" title="Stuff" image="#lamb"></a-link>
-    <a-link class="clickable" position="11 1 -8" href="https://aframe.io/a-painter/" title="A Painter\n" image="#lamb"></a-link>
-    <a-link link-controls id="baltri" title-color="red" class="clickable" position="14 1 -8" href="http://baltri.com" title="Baltri" image="#lamb"></a-link>
+    <!-- <a-link class="clickable" position="11 1 -8" href="https://aframe.io/a-painter/" title="A Painter\n" image="#lamb"></a-link> -->
+    <!-- <a-link link-controls id="baltri" title-color="red" class="clickable" position="14 1 -8" href="http://baltri.com" title="Baltri" image="#lamb"></a-link> -->
     <a-text position="-10 4 -6" value="Placed like this, you can literally walk into a 360 image. (note to self: find a 360 image worth showing off)"></a-text>
     <a-sky src="#lamb" radius="2" position="-7.5 1 -6"></a-sky>
 
@@ -242,6 +242,101 @@ Welcome traveler.
 
         return false;
       };
+
+
+
+
+      // PARTICAL STUFF
+
+      // https://aerotwist.com/tutorials/creating-particles-with-three-js/
+      // ^ above article is waaaay outdated but has some good styling pointers
+      // https://threejs.org/docs/#api/en/objects/Points
+      // 1800 20m particles over a 500m cube looks glitchy in a good way
+      let particleCount = 1800;
+      let particles = new THREE.Geometry();
+      let pMaterial = new THREE.ParticleBasicMaterial({
+        color: 0xFFFFFF,
+        // color: 0x666666,
+        size: 0.001,
+        // blending: THREE.AdditiveBlending,
+        // blending: THREE.NormalBlending,
+        transparent: true
+      });
+
+      for (var p = 0; p < particleCount; p++) {
+        // var pX = Math.random() * 500 - 250,
+        //     pY = Math.random() * 500 - 250,
+        //     pZ = Math.random() * 500 - 250,
+        //     particle = new THREE.Vertex(
+        //       new THREE.Vector3(pX, pY, pZ)
+        //     );
+        let x = Math.random() - 0.5 - 2;
+        let y = Math.random() - 0.5 + 1;
+        let z = Math.random() - 0.5;
+        let v = new THREE.Vector3(x, y, z);
+
+        particles.vertices.push(v);
+      }
+
+      // create the particle system
+      // var particleSystem = new THREE.ParticleSystem(
+      var particleSystem = new THREE.Points(particles, pMaterial);
+
+      // add it to the scene
+
+
+      // PARTICLE CLOUD
+      // FROM POSITION ARRAY
+      //   - takes an array of [x, y, z] positions
+      //   - particle count taken from array length
+      // TO POSITION ARRAY
+        
+
+      // DYNAMIC LENGTH
+      //   - replace with a larger geometry as needed,
+      //   - 
+      function drawParticleCloud(XYZArray) {
+        let total = XYZArray.length;
+        let particles = new THREE.Geometry();
+        let pMaterial = new THREE.ParticleBasicMaterial({
+          color: 0xFFFFFF,
+          size: 0.1,
+        });
+        for(let i = 0; i < XYZArray.length; i++) {
+          let v = new THREE.Vector3(XYZArray[i][0], XYZArray[i][1], XYZArray[i][2]);
+          particles.vertices.push(v);
+        }
+        let particleSystem = new THREE.Points(particles, pMaterial);
+        const scene = document.querySelector('a-scene')
+        window.addEventListener('DOMContentLoaded', e => {
+          document.querySelector('a-scene').object3D.add(particleSystem)
+        })
+      }
+
+      function randInRange(from, to) {
+        let diff = to - from;
+        return from + diff*Math.random()
+      }
+
+      // moved to oculus-quest-test
+      let thang = [
+        [0, 0, 0],
+        [0.5, Math.sqrt(2)/2, 0],
+        [1, 0, 0],
+        [0, 0, 0],
+      ]
+      drawParticleCloud(thang)
+
+
+
+
+      window.addEventListener('DOMContentLoaded', (event) => {
+        // console.log('yolo')
+        // const scene = document.querySelector('a-scene');
+        // console.log(scene.object3D)
+        // scene.appendChild(particleSystem);
+        document.querySelector('a-scene').object3D.add(particleSystem);
+      });
 
     };
 	}</script>
