--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- <script src="../../lib/GLTFExporter.js"></script> -->
         <script src="lib/jose-components.js"></script>
+        
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <meta charset="UTF-8">
     </head>
@@ -49,14 +50,14 @@
                 <video id="video-asset" src="vid.mp4"></video>
             </a-assets>
 
-            <a-box id="blue-cube" position="-3 0.5 -11" rotation="0 45 0" color="blue" opacity="0.3"></a-box>
-            <a-sphere id="red-sphere" click-to-reposition position="0 0.5 -11" radius="0.5" color="red" opacity="0.3"></a-sphere>
-            <a-cylinder id='green-cyl' position="3 0.75 -11" radius="0.5" height="1.5" color="green" opacity="0.3"></a-cylinder>
+            <a-box id="blue-cube" class="clickable" position="-3 0.5 -11" rotation="0 45 0" color="blue" opacity="0.3"></a-box>
+            <a-sphere id="red-sphere" class="clickable" click-to-reposition position="0 0.5 -11" radius="0.5" color="red" opacity="0.3"></a-sphere>
+            <a-cylinder id='green-cyl' class="clickable" position="3 0.75 -11" radius="0.5" height="1.5" color="green" opacity="0.3"></a-cylinder>
 
             <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
 
             <a-box id="clicker-game-banner" src="clicker-game.png" position="0.5 2.5 -7.5" color="white"></a-box>
-            <a-text value="Known bugs:\n- yellow button sometimes doesn't work for a few seconds\n- click events are laggy or defaulting to 'gaze based' on mobile (instead of handling screen-click buttons, if available)\n= NOTE: 'NEXT' cube doesn't do anything yet" position="1.1 2.5 -8"></a-text>
+            <a-text value="Known bugs:\n- yellow button sometimes doesn't work for a few seconds\n- dual-raycaster/clicker is glitchy\n- Updating to Aframe 0.9.2 from 0.8.2 would break link traversal" position="1.1 2.5 -8"></a-text>
 
             <a-entity class='table' position='-4 0.01 -9'>
                 <a-entity class='grid-fitter' position='0.5 0 0.5'>
@@ -76,7 +77,6 @@
 
                             <a-entity class='table-demo' position='0 0 0'>
 
-
                                 <a-entity id='clock-hrs'><a-sphere position='0 0 -0.35' radius='0.1'></a-sphere></a-entity>
                                 <a-entity id='clock-min'><a-sphere position='0 0 -0.60' radius='0.1'></a-sphere></a-entity>
                                 <a-entity id='clock-sec'><a-sphere position='0 0 -0.85' radius='0.1'></a-sphere></a-entity>
@@ -89,7 +89,7 @@
                             </a-entity>
 
                             <a-entity class='table-demo' position='-2 0 0'>
-                                <a-box id="clicker-button" depth= '0.52' width="0.52" height="0.32" position="0 0.05 0" color="yellow"></a-box>
+                                <a-box id="clicker-button" class="clickable" depth= '0.52' width="0.52" height="0.32" position="0 0.05 0" color="yellow"></a-box>
                                 <a-text value="<- click" position="0.26 0 0" rotation="-90 0 0"></a-text>
                                 <a-text value="Score:" align="center" position="0 0 0.45" rotation="-90 0 0"></a-text>
                                 <a-text id="clicker-score" value="0" align="center" position="0 0 0.70" rotation="-90 0 0"></a-text>
@@ -100,12 +100,12 @@
 
                     </a-entity>
 
+<!-- 
                     <a-entity id='next-button'>
                         <a-text position='7 1 3' value='next' align='center'></a-text> 
                         <a-box src='next.png' position='7 0.7 3' height='0.25' width='0.25' depth='0.25'></a-box>
                     </a-entity>
-
-                    
+ -->                    
 
                 </a-entity>
 
