add meduzos demo & fix mangogeddon lib route

--- a/art/mangogeddon.html
+++ b/art/mangogeddon.html
@@ -4,7 +4,7 @@
     <head>
         <title>Mangogeddon</title>
         <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-        <script src="/lib/jose-components.js"></script>
+        <script src="../lib/jose-components.js"></script>
     </head>
     <body style="font-family:courier; color:white; background-color: black">
 
