--- a/demo/shaggy-rogers/index.html
+++ b/demo/shaggy-rogers/index.html
@@ -4,18 +4,21 @@
     <head>
         <title>Shaggy Rogers</title>
         <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+          <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+
     </head>
     <body style="font-family:courier; color:white; background-color: black">
         <section id="main"></section>
         <a-scene ar id="scene">
 
+            <a-entity id="a" environment="preset: forest; groundColor: #445; grid: cross;"></a-entity>
+
             <a-entity position="0 0 0">
-                <!-- <a-camera look-controls="pointerLockEnabled: true" wasd-controls></a-camera> -->
+                <a-camera look-controls="pointerLockEnabled: true" wasd-controls></a-camera>
             </a-entity>
 
             <a-image src='shaggy.png' height='10' width='5' position='0 5 -10'></a-image>
             <a-image src='shaggy.png' height='1.905' width='0.6088' position='0 0.9525 -0.5'></a-image>
-
         </a-scene>
     </body>
 </html>
