disclaim that links might suck

--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -54,7 +54,7 @@
       <a-text value="movable" align="center" side="double"></a-text>
     </a-box>
 
-    <!-- <a-text position="8 4 -8" value="MANGOGEDDON (warning: doesn't have a link back to here)"></a-text> -->
+    <a-text position="5 4 -8" value="Links. May be buggy.\nMight require refreshing after you navigate.\n#YOLO"></a-text>
     <!-- <a-text position="8 4 -8" value="Click on these link to go to other sites. 'Stuff' is a room with a few things to click on (move controls pending). 'A-Painter' is a drawing appp by Mozilla. 'Baltri' is a weird art thing I'm doing with some friends from DR (click+move controls pending)."></a-text> -->
 
     <a-link class="clickable" position="5 1 -8" href="../../art/mangogeddon.html" title="MANGOGEDDON" image="#lamb"></a-link>
