add route to test stuff

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
 
             <h1>A place for stuff</h1>
             <br>
+            <p><a href="/test">[ TEST ]</a></p>
+            <br>
             <p>The Basics:</p>
             <br>
             <p>This is a personal sandbox site for testing WebVR/Aframe components. My focus so far has been more on creating re-usable reference code than making a consumer-ish website.</p>
