--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <h1>A place for stuff</h1>
             <br>
-            <p><a href="/test">[ TEST ]</a></p>
+            <p><a href="test/cube-clicker.html">[ TEST ]</a></p>
             <br>
             <p>The Basics:</p>
             <br>
